agregar web al portflio

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 	--clr-neutral-100: hsl(0, 0%, 90%);
 	--clr-neutral-300: hsl(0, 0%, 70%);
 	--clr-neutral-500: hsl(0, 0%, 60%);
+	--clr-neutral-600: hsl(0, 0%, 50%);
 	--clr-neutral-700: hsl(0, 0%, 30%);
 	--clr-neutral-800: hsl(0, 0%, 20%);
 	--clr-neutral-900: hsl(0, 0%, 10%);
