--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
 	--clr-neutral-700: hsl(0, 0%, 30%);
 	--clr-neutral-800: hsl(0, 0%, 20%);
 	--clr-neutral-900: hsl(0, 0%, 10%);
+	--clr-transparent-400: hsl(0, 0%, 0%, 0.75);
 }
 
 *,
@@ -105,11 +106,11 @@ p a {
 	border-radius: 0.5em;
 	transition: background 250ms;
 	font-weight: 600;
-	border: 2px solid var(--clr-neutral-700);
+	border: 2px solid white;
 	margin-inline: auto;
+	box-shadow: 0 0 0 2px var(--clr-neutral-700);
 }
 
 .link:hover {
 	background-color: var(--clr-accent-light);
-	/* color: white; */
 }
