agregado redirect para spa

--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,7 @@ body {
 }
 
 main {
-	margin-top: 5rem;
+	margin-top: 4rem;
 }
 
 li {
@@ -113,4 +113,10 @@ p a {
 
 .link:hover {
 	background-color: var(--clr-accent-light);
+}
+
+@media screen and (width > 800px) {
+	main {
+		margin-top: 5rem;
+	}
 }
