--- a/src/components/WebExample.css
+++ b/src/components/WebExample.css
@@ -1,12 +1,19 @@
 .web {
 	max-width: 550px;
 	margin-inline: auto;
-	margin-bottom: 4rem;
+	margin-bottom: 3rem;
 	gap: 2rem;
+	border-bottom: 2px solid var(--clr-accent);
+	padding-bottom: 3rem;
 }
 
-.web:last-child {
-	margin-bottom: 1.5rem;
+.web:last-of-type {
+	margin-bottom: 1rem;
+	border: 0;
+}
+
+.web:first-of-type {
+	padding-top: 1.5rem;
 }
 
 .web__title {
